fix listing paths